<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.vaibhav.hotstock.login.LoginActivity">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/username"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_marginLeft="@dimen/margin_button"
                android:layout_marginRight="@dimen/margin_button"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/login" />

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_marginLeft="@dimen/margin_button"
                android:layout_marginRight="@dimen/margin_button"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/register" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>